@@ -3263,6 +3263,78 @@ return|return
 name|rows
 return|;
 block|}
+comment|/**    * Tool to get the reference to the region server object that holds the    * region of the specified user table.    * It first searches for the meta rows that contain the region of the    * specified table, then gets the index of that RS, and finally retrieves    * the RS's reference.    * @param tableName user table to lookup in .META.    * @return region server that holds it, null if the row doesn't exist    * @throws IOException    */
+specifier|public
+name|HRegionServer
+name|getRSForFirstRegionInTable
+parameter_list|(
+name|byte
+index|[]
+name|tableName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|List
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|metaRows
+init|=
+name|getMetaTableRows
+argument_list|(
+name|tableName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|metaRows
+operator|==
+literal|null
+operator|||
+name|metaRows
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+name|int
+name|index
+init|=
+name|hbaseCluster
+operator|.
+name|getServerWith
+argument_list|(
+name|metaRows
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+decl_stmt|;
+return|return
+name|hbaseCluster
+operator|.
+name|getRegionServerThreads
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|index
+argument_list|)
+operator|.
+name|getRegionServer
+argument_list|()
+return|;
+block|}
 comment|/**    * Starts a<code>MiniMRCluster</code> with a default number of    *<code>TaskTracker</code>'s.    *    * @throws IOException When starting the cluster fails.    */
 specifier|public
 name|void
