@@ -97,6 +97,22 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|regionserver
+operator|.
+name|HRegionServer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|util
 operator|.
 name|Bytes
@@ -509,33 +525,14 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|int
+name|HRegionServer
 name|rs
 init|=
 name|TEST_UTIL
 operator|.
-name|getHBaseCluster
-argument_list|()
-operator|.
-name|getServerWith
-argument_list|(
-name|TEST_UTIL
-operator|.
-name|getHBaseCluster
-argument_list|()
-operator|.
-name|getRegions
+name|getRSForFirstRegionInTable
 argument_list|(
 name|TABLE_NAME
-argument_list|)
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|getRegionName
-argument_list|()
 argument_list|)
 decl_stmt|;
 name|Scan
@@ -596,15 +593,7 @@ name|scan
 argument_list|)
 decl_stmt|;
 comment|// This takes way less than SCANNER_TIMEOUT*100
-name|TEST_UTIL
-operator|.
-name|getHBaseCluster
-argument_list|()
-operator|.
-name|getRegionServer
-argument_list|(
 name|rs
-argument_list|)
 operator|.
 name|abort
 argument_list|(
