@@ -998,32 +998,6 @@ operator|.
 name|META_TABLE_NAME
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
-name|server
-operator|=
-name|cluster
-operator|.
-name|getRegionServerThreads
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|getRegionServer
-argument_list|()
-expr_stmt|;
-name|this
-operator|.
-name|log
-operator|=
-name|server
-operator|.
-name|getLog
-argument_list|()
-expr_stmt|;
 comment|// Create the test table and open it
 name|HTableDescriptor
 name|desc
@@ -1068,6 +1042,29 @@ argument_list|,
 name|tableName
 argument_list|)
 decl_stmt|;
+name|server
+operator|=
+name|TEST_UTIL
+operator|.
+name|getRSForFirstRegionInTable
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|tableName
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|log
+operator|=
+name|server
+operator|.
+name|getLog
+argument_list|()
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -1374,7 +1371,6 @@ name|IllegalAccessException
 throws|,
 name|InvocationTargetException
 block|{
-comment|// kill a datanode in the pipeline to force a log roll on the next sync()
 name|OutputStream
 name|stm
 init|=
@@ -1506,15 +1502,93 @@ operator|.
 name|META_TABLE_NAME
 argument_list|)
 expr_stmt|;
-name|this
+comment|// Create the test table and open it
+name|String
+name|tableName
+init|=
+name|getName
+argument_list|()
+decl_stmt|;
+name|HTableDescriptor
+name|desc
+init|=
+operator|new
+name|HTableDescriptor
+argument_list|(
+name|tableName
+argument_list|)
+decl_stmt|;
+name|desc
 operator|.
+name|addFamily
+argument_list|(
+operator|new
+name|HColumnDescriptor
+argument_list|(
+name|HConstants
+operator|.
+name|CATALOG_FAMILY
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|admin
+operator|.
+name|tableExists
+argument_list|(
+name|tableName
+argument_list|)
+condition|)
+block|{
+name|admin
+operator|.
+name|disableTable
+argument_list|(
+name|tableName
+argument_list|)
+expr_stmt|;
+name|admin
+operator|.
+name|deleteTable
+argument_list|(
+name|tableName
+argument_list|)
+expr_stmt|;
+block|}
+name|admin
+operator|.
+name|createTable
+argument_list|(
+name|desc
+argument_list|)
+expr_stmt|;
+name|HTable
+name|table
+init|=
+operator|new
+name|HTable
+argument_list|(
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
+argument_list|,
+name|tableName
+argument_list|)
+decl_stmt|;
 name|server
 operator|=
-name|cluster
+name|TEST_UTIL
 operator|.
-name|getRegionServer
+name|getRSForFirstRegionInTable
 argument_list|(
-literal|0
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|tableName
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|this
@@ -1594,81 +1668,6 @@ operator|+
 literal|1
 argument_list|)
 expr_stmt|;
-comment|// Create the test table and open it
-name|String
-name|tableName
-init|=
-name|getName
-argument_list|()
-decl_stmt|;
-name|HTableDescriptor
-name|desc
-init|=
-operator|new
-name|HTableDescriptor
-argument_list|(
-name|tableName
-argument_list|)
-decl_stmt|;
-name|desc
-operator|.
-name|addFamily
-argument_list|(
-operator|new
-name|HColumnDescriptor
-argument_list|(
-name|HConstants
-operator|.
-name|CATALOG_FAMILY
-argument_list|)
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|admin
-operator|.
-name|tableExists
-argument_list|(
-name|tableName
-argument_list|)
-condition|)
-block|{
-name|admin
-operator|.
-name|disableTable
-argument_list|(
-name|tableName
-argument_list|)
-expr_stmt|;
-name|admin
-operator|.
-name|deleteTable
-argument_list|(
-name|tableName
-argument_list|)
-expr_stmt|;
-block|}
-name|admin
-operator|.
-name|createTable
-argument_list|(
-name|desc
-argument_list|)
-expr_stmt|;
-name|HTable
-name|table
-init|=
-operator|new
-name|HTable
-argument_list|(
-name|TEST_UTIL
-operator|.
-name|getConfiguration
-argument_list|()
-argument_list|,
-name|tableName
-argument_list|)
-decl_stmt|;
 name|writeData
 argument_list|(
 name|table
@@ -1746,6 +1745,7 @@ name|getDefaultReplication
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// kill a datanode in the pipeline to force a log roll on the next sync()
 name|assertTrue
 argument_list|(
 name|dfsCluster
